Added pagination to subs list endpoint
